// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation Should render with props 1`] = `
<section>
  <div
    class="MuiPaper-root MuiStepper-root MuiStepper-horizontal makeStyles-root-4 MuiPaper-elevation0"
  >
    <div
      class="MuiStep-root MuiStep-horizontal"
    >
      <span
        class="MuiStepLabel-root MuiStepLabel-horizontal Mui-disabled"
      >
        <span
          class="MuiStepLabel-labelContainer"
        >
          <span
            class="MuiTypography-root MuiStepLabel-label MuiTypography-body2 MuiTypography-displayBlock"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-leftLink-5 MuiTypography-colorPrimary"
              href="/route"
            >
              title
            </a>
          </span>
        </span>
      </span>
    </div>
    <div
      class="MuiStepConnector-root MuiStepConnector-horizontal Mui-disabled"
    >
      <span
        class="MuiStepConnector-line MuiStepConnector-lineHorizontal"
      />
    </div>
    <div
      class="MuiStep-root MuiStep-horizontal"
    >
      <span
        class="MuiStepLabel-root MuiStepLabel-horizontal Mui-disabled"
      >
        <span
          class="MuiStepLabel-labelContainer"
        >
          <span
            class="MuiTypography-root MuiStepLabel-label MuiTypography-body2 MuiTypography-displayBlock"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-leftLink-5 MuiTypography-colorPrimary"
              href="/route"
            >
              title
            </a>
          </span>
        </span>
      </span>
    </div>
  </div>
</section>
`;

exports[`Navigation Should render without props 1`] = `
<section>
  <div
    class="MuiPaper-root MuiStepper-root MuiStepper-horizontal makeStyles-root-1 MuiPaper-elevation0"
  >
    <div
      class="MuiStep-root MuiStep-horizontal"
    >
      <span
        class="MuiStepLabel-root MuiStepLabel-horizontal Mui-disabled"
      >
        <span
          class="MuiStepLabel-labelContainer"
        >
          <span
            class="MuiTypography-root MuiStepLabel-label MuiTypography-body2 MuiTypography-displayBlock"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="/"
            >
              Home
            </a>
          </span>
        </span>
      </span>
    </div>
    <div
      class="MuiStepConnector-root MuiStepConnector-horizontal Mui-disabled"
    >
      <span
        class="MuiStepConnector-line MuiStepConnector-lineHorizontal"
      />
    </div>
    <div
      class="MuiStep-root MuiStep-horizontal"
    >
      <span
        class="MuiStepLabel-root MuiStepLabel-horizontal Mui-disabled"
      >
        <span
          class="MuiStepLabel-labelContainer"
        >
          <span
            class="MuiTypography-root MuiStepLabel-label MuiTypography-body2 MuiTypography-displayBlock"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="/"
            >
              Home
            </a>
          </span>
        </span>
      </span>
    </div>
  </div>
</section>
`;
